UI changes, Navigation improvements

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^2.4.3-beta.2",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
+    "react-modal": "^3.11.2",
+    "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
